--- a/2week_git_learning_templates/2025-04-12.md
+++ b/2week_git_learning_templates/2025-04-12.md
@@ -7,9 +7,23 @@
 - 変更履歴や現在の状態をチェックするコマンドの活用
 
 ---
+## 📝 Day 6 - 2025-04-12 Git作業振り返りメモ
 
-## 🧠 今日覚えたこと
+### ❌ 今日の間違い・トラブル
+- `git add` の際にディレクトリ名を誤入力（例：`2weeks_git_learning_templates/` → 正：`2week_git_learning_templates/`）
+- `.gitignore` をコミットしようとしたが、リモートにも変更があったためpull時に衝突
+- サブモジュールの警告（embedded git repo）を誤ってaddしようとした
 
-## 💡 気づき・疑問
+---
 
-## ✨ 一言ふりかえり
+### ✅ 確認したこと・理解が深まった点
+- `git status` で変更・未追跡・削除ファイルを区別できるようになった
+- `git add -A` で全変更を一括ステージング可能なことを確認
+- サブモジュールの仕組み（.gitが中にあるとリポジトリとして扱われる）を理解
+- `.gitignore` の役割と、Gitのトラッキング対象からの除外方法を学習
+
+---
+
+### ⚠️ エラー一覧と対応
+
+1. **pathspec エラー**
