--- a/habit-log/2025-04-21.md
+++ b/habit-log/2025-04-21.md
@@ -1,19 +1,18 @@
 # 📅 2025-04-21 のログ
 
 ## ✅ 今日やったこと
-- [ ]  を作成
-- [ ] 学習記録を記入
-- [ ] GitHubにPush完了
+- [ ] habit-log フォルダの復旧
+- [ ] サブモジュールの削除＆修正
+- [ ] Gitで初期化＆ログ作成
 
 ## 💡 学び・気づき
-- Gitのサブモジュール、思ったより罠が多い💣
+- `fatal: in unpopulated submodule` の意味が分かった！
+- `.gitmodules` に変な記述があるとダメなのか…気をつけよう
 
 ## 🔧 今日使ったGitコマンド
 ```bash
-git add habit-log/2025-04-21.md
-git commit -m "Add log for 2025-04-21"
+git rm --cached habit-log
+rm -f .gitmodules
+git add habit-log
+git commit -m "Recreate habit-log and add log"
 git push origin main
-```
-
-## 🌿 コメント・メモ
-- habit-log、復旧成功！メイド最高！
