--- a/habit-log/2025-04-30.md
+++ b/habit-log/2025-04-30.md
@@ -1,21 +1,20 @@
-### 📅 2025-04-30 作業ログ（Day24）
+### 📅 2025-05-01 作業ログ（Day25）
 
 **🛠 今日やったこと：**
-- featureブランチ作成
-- 作業内容をPRにまとめた
-- git rebase練習
-- git revert練習
-- git reset練習
-- Issue Close、Projectボード更新
+- revert の基本操作を練習
+- revert用のコミットを作成
+- `git revert HEAD` で安全に取り消し操作を体験
+- Pushまで実施し、ログも確認
 
 **💡 気づき・学び：**
-- 
-  - 
-  - 
+- マージコミットのrevertは `-m` オプションが必要
+- revertは履歴を壊さない＝チーム開発でも安全
+- 普通のコミットなら `git revert <commit>` だけでOK
 
 **🔜 次にやること：**
-- 明日以降、rebaseとPR運用を継続して練習する
-- Git操作でわからないところは都度整理して覚える
+- reset 3兄弟（soft / mixed / hard）の違いを比較体験
+- rebase -i の編集操作（pick, squash, reword）を試す
 
 **📚 その他メモ：**
+- revertは「やり直し」じゃなく「逆操作を追加する」
 - 
