--- a/habit-log/2025-05-01.md
+++ b/habit-log/2025-05-01.md
@@ -1,18 +1,17 @@
 ### 📅 Day 25 - 2025-05-01（木）
 
 **✅ 今日やったこと**
-- [ ] `git pull` から始めてブランチ作成 → 作業 → Push の基本フローを実施
-- [ ] `git reset` の3種類（soft / mixed / hard）を比較体験（昨日の続き）
-- [ ] `git rebase -i` の操作（pick / squash / reword）をもう一度試した
-- [ ] GitHub Pages の表示確認（更新内容が反映されているかチェック）
-- [ ] `README.md` の見直し・改善（必要に応じて加筆修正）
+- [x] `git reset`（soft / mixed / hard）を体験し、それぞれの動作範囲を確認
+- [x] `git rebase -i` を使用し、pick / squash / reword を試す
+- [x] `day25-log` ブランチを作成 → rebase実行 → GitHubへPush → Pull Request作成
+- [x] GitHub Projects・Issueも更新予定
 
 **📘 学んだこと・気づき**
-- `reset` は本当に注意が必要。とくに `--hard` は戻せないことを意識。
-- `rebase -i` は履歴の整理に便利だけど、Push前に使うのが安全。
-- GitHub Pages は反映に少し時間がかかる場合がある。焦らない。
-- READMEも定期的に見直すと、プロジェクトの見栄えが良くなる。
+- `reset` は状態（コミット／ステージ／ワークツリー）の巻き戻し範囲が違うと分かったが、特に `--hard` は慎重に扱うべき。
+- `rebase -i` による履歴整理は、複数人開発や公開リポジトリでは「綺麗な履歴」にするのに重要。ただし、仕組みと効果の理解はまだ不十分。
+- `vim` の保存・終了（`:wq`）操作が直感的でないので、ハンズオン形式で学び直した方が良さそう。
 
-**📝 明日やること**
-- Issue→Branch→PR→Mergeの流れを1セット体験
-- GitHub上での操作も確認（レビュー・マージ手順）
+**📝 明日やること（Day 26）**
+- GitHub Pages の更新確認と反映チェック
+- `README.md` の内容整理（プロジェクト説明の充実）
+- 余力があれば Issue を起点に → Branch → Pull Request → Merge の一連の流れを小規模で再体験
