fix: YAMLフロントマターを修正

--- a/habit-log/_posts/2025-04-28.md
+++ b/habit-log/_posts/2025-04-28.md
@@ -1,4 +1,10 @@
 ---
+layout: single
+title: "2025年4月28日の学習記録"
+date: 2025-04-28
+categories: [学習記録]
+tags: [GitHub, Issue管理]
+---
 
 ## 🔥 今日の追加作業まとめ
 
