fix: 投稿の表示順序を修正

--- a/habit-log/_posts/2025-05-01.md
+++ b/habit-log/_posts/2025-05-01.md
@@ -1,3 +1,11 @@
+---
+layout: single
+title: "Day 25 - Git resetとrebaseの学習"
+date: 2025-05-01
+categories: [学習記録]
+tags: [Git, reset, rebase]
+---
+
 ### 📅 Day 25 - 2025-05-01（木）
 
 **✅ 今日やったこと**
