再掲載：rebase,reset他

--- a/habit-log/2025-05-01.md
+++ b/habit-log/2025-05-01.md
@@ -1,11 +1,17 @@
-# 2025年5月1日のログ
+### 📅 Day 25 - 2025-05-01（木）
 
-## 今日の作業
-- GitHub Pagesの表示不具合を調査
-- Jekyllテーマの設定を確認
-- ビルドエラーの原因を特定
+**✅ 今日やったこと**
+- [x] `git reset`（soft / mixed / hard）を体験し、それぞれの動作範囲を確認
+- [x] `git rebase -i` を使用し、pick / squash / reword を試す
+- [x] `day25-log` ブランチを作成 → rebase実行 → GitHubへPush → Pull Request作成
+- [x] GitHub Projects・Issueも更新予定
 
-## 学んだこと
-- GitHub Pagesのビルドプロセス
-- Jekyllテーマの設定方法
-- YAMLフロントマターの重要性 
+**📘 学んだこと・気づき**
+- `reset` は状態（コミット／ステージ／ワークツリー）の巻き戻し範囲が違うと分かったが、特に `--hard` は慎重に扱うべき。
+- `rebase -i` による履歴整理は、複数人開発や公開リポジトリでは「綺麗な履歴」にするのに重要。ただし、仕組みと効果の理解はまだ不十分。
+- `vim` の保存・終了（`:wq`）操作が直感的でないので、ハンズオン形式で学び直した方が良さそう。
+
+**📝 明日やること（Day 26）**
+- GitHub Pages の更新確認と反映チェック
+- `README.md` の内容整理（プロジェクト説明の充実）
+- 余力があれば Issue を起点に → Branch → Pull Request → Merge の一連の流れを小規模で再体験
