test: reveal Format Markdown in Actions

--- a/habit-log/habit-log/2025-05-04.md
+++ b/habit-log/habit-log/2025-05-04.md
@@ -7,3 +7,4 @@ Action fix test
 ✅ Final Actions check
 Action final check
 🚀 Force trigger Format Markdown
+🔥 Trigger test to reveal Format Markdown
