失敗の追記

--- a/habit-log/2025-05-04.md
+++ b/habit-log/2025-05-04.md
@@ -1,6 +1,61 @@
 # 📅 2025-05-03（Day 28）GitHubプロフィール整備＋積み残し消化まとめ
-
 ---
+title: "Day26：GitHub Actionsを触ってみる"
+date: 2025-04-26
+---
+
+## 🎯 今日のテーマ
+
+- `.github/workflows` に Action を設置して自動実行を体験
+- Markdownファイルの編集で GitHub Actions をトリガー
+- 「Format Markdown」ワークフローを試行錯誤
+
+## ✅ やったこと
+
+- `auto-format.yml` を正しい場所に設置（`.github/workflows/`）
+- `markdownlint` Action を設定して `.md` を対象に
+- CLIでコミット＆push → Actions起動を複数回試行
+- サイドバーに出ない現象を調査、`workflow_dispatch` も追加
+
+## 💡 気づき
+
+- `.github/workflows` はリポジトリ直下でなければGitHubに認識されない！
+- サイドバー表示には実行回数やトリガー種別も影響するらしい
+- 正しく書いても「GitHubが無視する条件」がある
+
+## 🔗 参考リンク
+
+- [markdownlint-cli2-action](https://github.com/DavidAnson/markdownlint-cli2-action)
+- [GitHub Actions 表示されないときの議論](https://github.com/orgs/community/discussions/25179)
+---
+title: "Day26：GitHub Actionsを触ってみる"
+date: 2025-04-26
+---
+
+## 🎯 今日のテーマ
+
+- `.github/workflows` に Action を設置して自動実行を体験
+- Markdownファイルの編集で GitHub Actions をトリガー
+- 「Format Markdown」ワークフローを試行錯誤
+
+## ✅ やったこと
+
+- `auto-format.yml` を正しい場所に設置（`.github/workflows/`）
+- `markdownlint` Action を設定して `.md` を対象に
+- CLIでコミット＆push → Actions起動を複数回試行
+- サイドバーに出ない現象を調査、`workflow_dispatch` も追加
+
+## 💡 気づき
+
+- `.github/workflows` はリポジトリ直下でなければGitHubに認識されない！
+- サイドバー表示には実行回数やトリガー種別も影響するらしい
+- 正しく書いても「GitHubが無視する条件」がある
+
+## 🔗 参考リンク
+
+- [markdownlint-cli2-action](https://github.com/DavidAnson/markdownlint-cli2-action)
+- [GitHub Actions 表示されないときの議論](https://github.com/orgs/community/discussions/25179)
+
 
 ## 🎯 今日のテーマ
 
