Move 2025-05-09.md and 2025-05-13.md to habit-log directory

--- a/habit-log/2025-05-09.md
+++ b/habit-log/2025-05-09.md
@@ -1,24 +1,111 @@
-# 2025年5月9日の学習ログ
+了解です！こちらが**本日（Day05）のGit運用メモ（IssueとPull Request運用）**の再掲載です。
+そのまま .md ファイルに保存、Notionに貼り付け、共有ドキュメントにも使える構成です👇
 
-## 📝 今日やったこと
-- リポジトリのディレクトリ構造を整理
-- ファイル管理の改善
-- Gitコンフリクトの解決方法を学習
+⸻
 
-## 🧠 学んだこと
-- リベースによるコンフリクト解決のプロセス
-- 複数ブランチでの作業管理
-- ファイル構造の整理方法
 
-## 🛠 使用したコマンド
+# 📘 Git運用学習メモ：IssueとPull Request連携（Day05）
+
+---
+
+## ✅ 目的
+
+- GitHub上でIssueとPull Request（PR）を正しく連携させる方法を習得する。
+- フッターの修正を例に、PR → mainマージ → GitHub Pages反映 → Issue自動クローズの流れを体験。
+
+---
+
+## 📌 作業内容まとめ
+
+### 1. ブランチ作成とIssue作成
+
 ```bash
-git status
-git add .
-git commit -m "メッセージ"
-git rebase --continue
-git rebase --abort
-```
+git checkout -b feature/add-footer-year
 
-## 📌 次回のタスク
-- [ ] GitHub Pagesの内容更新
-- [ ] 学習記録の継続
+	•	GitHubで #12 フッターに現在の年を表示する Issueを作成。
+
+⸻
+
+2. フッターの修正（例）
+
+<!-- docs/index.html に追加 -->
+<footer>
+  <p>© 2025 syokota-cyber</p>
+</footer>
+
+git add docs/index.html
+git commit -m "フッターに現在の年を追加 #12"
+
+📝 注意：このコミットメッセージだけではIssueは自動で閉じられない（理由は後述）
+
+⸻
+
+3. GitHubにPush & Pull Request作成
+
+git push origin feature/add-footer-year
+
+	•	PR作成時、本文に何も書かなかった（← これがポイント）
+	•	Fixes #12 をPR本文に書いていなかったため、Issueは自動で閉じられなかった
+
+⸻
+
+🔄 マージ後に実際に起きたこと
+
+起きたこと	結果
+PRを main にマージ	✅ © 2025 syokota-cyber がGitHub Pagesに反映
+PR本文が空だった	❌ Issue #12 は自動でクローズされなかった
+コミットに #12 を含めた	❌ 自動クローズされない（PR本文優先のため）
+
+
+⸻
+
+💡 自動クローズの条件まとめ
+
+メッセージの内容	自動クローズされるか？
+"Fixes #12" in PR本文	✅ はい（推奨）
+"Fixes #12" in コミットのみ	❌ いいえ
+"#12" のみ	❌ いいえ
+マージ後コメントで Fixes #12	✅ はい（即時）
+
+
+⸻
+
+✅ 解決方法（今回）
+	•	PRのマージ後に、コメント欄に次のように記述：
+
+Fixes #12
+
+	•	GitHubが即座に Issue #12 をクローズし、リンクも表示。
+
+⸻
+
+📌 今後のベストプラクティス
+	1.	PR本文に Fixes #XX を必ず記載
+	2.	PRテンプレートに 関連Issue: Fixes #XX セクションを設けるのもおすすめ
+	3.	コミットメッセージには補助的に #XX を入れる程度でよい
+
+⸻
+
+✅ PR画面で確認すべき要素
+
+タブ	内容
+Conversation	PRタイトル・本文・Issueとのリンク（Fixes）
+Commits	含まれるコミット一覧
+Files changed	実際の変更内容
+Checks	CI/CDの実行状況（あれば）
+
+
+⸻
+
+📷 ビジュアル確認の証拠
+	•	GitHub Pagesに © 2025 syokota-cyber が表示された → ✅ 本番反映確認済み
+	•	PR画面に No description provided. → ❌ Fixes文なし
+	•	Issue #12 は手動またはコメントでクローズ → ✅ 再現可能
+
+⸻
+
+🏁 まとめ
+	•	PRの本文に Fixes #XX を書くことが、自動クローズ運用の鍵。
+	•	GitHub Pagesの変更反映は、PR → mainマージで即座に行われる。
+	•	実運用では、PR本文とIssueのリンクを意識的に管理する習慣を持つことが重要。
+
