--- a/habit-log/2025-05-09.md
+++ b/habit-log/2025-05-09.md
@@ -1,3 +1,5 @@
+#git-learning #git-workflow #daily-practice
+
 了解です！こちらが**本日（Day05）のGit運用メモ（IssueとPull Request運用）**の再掲載です。
 そのまま .md ファイルに保存、Notionに貼り付け、共有ドキュメントにも使える構成です👇
 
