--- a/habit-log/2025-05-10.md
+++ b/habit-log/2025-05-10.md
@@ -1,3 +1,5 @@
+#git-learning #daily-practice #git-workflow
+
 了解です！では、Day06〜07を統合した本日のまとめを以下に整理します。
 
 ⸻
@@ -48,7 +50,7 @@ git add + git commit でマージ完了	✅ マージ履歴がログに反映さ
 📅 次回予告（Day08）
 
 「stashを使って、作業の一時中断と復元を体験する」
-→ 実務で“今すぐ切り替えたい時”に役立つテクニックです。
+→ 実務で"今すぐ切り替えたい時"に役立つテクニックです。
 
 ⸻
 
