--- a/habit-log/2025/05-15.md
+++ b/habit-log/2025/05-15.md
@@ -1,5 +1,3 @@
-#git-learning #daily-practice #git-workflow
-
 # 📅 Git 学習メモ（2025-05-15）
 
 ## 🔷 今日のテーマ：Submodule（外部リポジトリの連携）
@@ -17,4 +15,4 @@
 #### 1. submoduleの追加
 
 ```bash
-git submodule add https://github.com/octocat/Hello-World libs/shared-utilsgit 
+git submodule add https://github.com/octocat/Hello-World libs/shared-utilsr
