コンフリクト予防

--- a/daily-log/2025-05-28.md
+++ b/daily-log/2025-05-28.md
@@ -14,3 +14,23 @@
 どこかで詰まったら、その時点で「今ここで止まった」と教えてください。
 一緒に確実に進めます！
 
+ コンフリクト対策・予防の基本
+こまめにgit pullして、リモートの最新状態をローカルに反映する
+作業ブランチごとに「mainの最新を取り込む」習慣をつける
+同じファイルを複数人で同時に編集しない（できるだけ分担）
+2. コンフリクトが起きたときの「慣れ方」
+まずgit statusで、どのファイルが衝突しているか確認
+エディタで<<<<<<<や=======、>>>>>>>を探し、どちらの内容を残すか自分で決めて編集
+編集後はgit add→git commitで解決
+3. 練習・慣れるためのおすすめ
+意図的に小さなコンフリクトを作って、解決練習を繰り返す
+「どちらの内容を残すか」だけに集中して、区切り記号を消す練習をする
+「怖くなったらgit merge --abortでやり直せる」と覚えておく
+4. どうしても不安なときは
+作業前にgit statusやgit log --oneline --graphで履歴を確認
+分からなくなったら、必ず「今どこで止まっているか」をメモしておく
+一人で悩まず、すぐに質問・相談する
+まとめ
+コンフリクトは「慣れ」で必ず克服できます！
+失敗してもgit merge --abortでやり直せるので、怖がらずに何度も練習しましょう
+これからも一緒に、少しずつ「アレルギー」を減らしていきましょう！
