docs: Day12の学習記録をマークダウン形式で整理

--- a/daily-log/2025-06-04.md
+++ b/daily-log/2025-06-04.md
@@ -1,27 +1,37 @@
-Day12: resetとreflog 巻き戻し・復元ハンズオンまとめ
-🎯 今日の目的
+# Day12: resetとreflog 巻き戻し・復元ハンズオンまとめ
+
+## 🎯 今日の目的
 Gitの履歴操作（reset）と復元（reflog）の実践的な使い方を体験し、誤操作からのリカバリ方法を理解する
-✅ 実践したこと
-resetコマンドの使い分けを体験
-git reset --soft HEAD~1：コミットだけを取り消し、変更はステージングに残す
-git reset HEAD~1：コミットを取り消し、変更はワーキングディレクトリに残す
-git reset --hard HEAD~1：コミットも変更も完全に消す（要注意）
-reflogでの復元練習
-git reflogで過去のHEADの移動履歴を確認
-git reset --hard HEAD@{n}で好きな時点に巻き戻し・復元
-ファイルの復元コマンドの理解
-git restore <ファイル名>：ワーキングディレクトリの変更を破棄
-git restore --staged <ファイル名>：ステージングを解除
-コンフリクト解消の実践
-archive/sample.txtのコンフリクトを手動で解消
-コンフリクトマーカー（<<<<<<<, =======, >>>>>>>）を削除し、両方の内容を統合
-❓ 質問・疑問点とその回答
-Q. git restore ../conflict.txt の意味は？
+
+## ✅ 実践したこと
+
+### 1. resetコマンドの使い分けを体験
+- `git reset --soft HEAD~1`：コミットだけを取り消し、変更はステージングに残す
+- `git reset HEAD~1`：コミットを取り消し、変更はワーキングディレクトリに残す
+- `git reset --hard HEAD~1`：コミットも変更も完全に消す（要注意）
+
+### 2. reflogでの復元練習
+- `git reflog`で過去のHEADの移動履歴を確認
+- `git reset --hard HEAD@{n}`で好きな時点に巻き戻し・復元
+
+### 3. ファイルの復元コマンドの理解
+- `git restore <ファイル名>`：ワーキングディレクトリの変更を破棄
+- `git restore --staged <ファイル名>`：ステージングを解除
+
+### 4. コンフリクト解消の実践
+- `archive/sample.txt`のコンフリクトを手動で解消
+- コンフリクトマーカー（`<<<<<<<`, `=======`, `>>>>>>>`）を削除し、両方の内容を統合
+
+## ❓ 質問・疑問点とその回答
+
+### Q. `git restore ../conflict.txt` の意味は？
 → ファイルを直前のコミットの状態に戻すコマンド。削除や変更を元に戻したいときに使う。
-Q. resetやreflogはaddやpushの前後で使える？
-→
-resetはadd後やコミット後に使える。
-push後もローカルでは使えるが、チーム開発では注意が必要（履歴が他人とズレるため）。
-reflogはローカルのHEADの移動履歴をすべて記録しているので、ほぼすべての操作の巻き戻し・復元に使える。
-Q. コンフリクト解消の具体的な手順は？
-→ ファイル内のマーカーを削除し、必要な内容だけを残して保存。その後git add→git commitで解消完了。
+
+### Q. resetやreflogはaddやpushの前後で使える？
+→ 
+- resetはadd後やコミット後に使える。
+- push後もローカルでは使えるが、チーム開発では注意が必要（履歴が他人とズレるため）。
+- reflogはローカルのHEADの移動履歴をすべて記録しているので、ほぼすべての操作の巻き戻し・復元に使える。
+
+### Q. コンフリクト解消の具体的な手順は？
+→ ファイル内のマーカーを削除し、必要な内容だけを残して保存。その後`git add`→`git commit`で解消完了。
