タグの管理を追加

--- a/daily-log/2025-07-11.md
+++ b/daily-log/2025-07-11.md
@@ -104,3 +104,44 @@
 - 実際の業務でも使える実践的なスキルを身につけられた
 
 ---
+
+## タグの管理・活用
+
+### タグの付け方
+- 公開やリリースのタイミングで、分かりやすい名前と説明を付けてタグを作成する。
+- 例：
+  ```bash
+  git tag -a v1.0-blog-git-document -m "Release: ブログ記事公開"
+  git push origin v1.0-blog-git-document
+  ```
+
+### タグ一覧・詳細の確認
+- 付与したタグは一覧表示や詳細確認ができる。
+- 例：
+  ```bash
+  git tag -l
+  git show v1.0-blog-git-document
+  ```
+
+### タグからの復元・ブランチ作成
+- タグの時点に一時的に戻る：
+  ```bash
+  git checkout v1.0-blog-git-document
+  ```
+- その時点から修正版ブランチを作る：
+  ```bash
+  git checkout -b fix-blog-typo v1.0-blog-git-document
+  # 修正作業→add→commit→push
+  ```
+
+### 安全なロールバック（revert）の使い方
+- タグ以降のコミットを「打ち消しコミット」で元に戻すことで、履歴を消さずに安全にロールバックできる。
+- 例：
+  ```bash
+  git checkout main
+  git revert v1.0-blog-git-document..HEAD
+  git push origin main
+  ```
+- revertは履歴を残したまま「元に戻す」ので、チーム開発や本番環境でも安心して使える。
+
+---
